tweaks for demo

--- a/tekton/pipeline/build-and-deploy-pipeline.yaml
+++ b/tekton/pipeline/build-and-deploy-pipeline.yaml
@@ -22,11 +22,11 @@ spec:
       name: source-to-image
     params:
       - name: pathToContext
-        value: "${params.pathToContext}"
+        value: "$(params.pathToContext)"
       - name: imageUrl
-        value: "${params.imageUrl}"
+        value: "$(params.imageUrl)"
       - name: imageTag
-        value: "${params.imageTag}"
+        value: "$(params.imageTag)"
     resources:
       inputs:
         - name: git-source
@@ -38,11 +38,11 @@ spec:
       - source-to-image
     params:
       - name: pathToYamlFile
-        value:  "${params.pathToYamlFile}"
+        value:  "$(params.pathToYamlFile)"
       - name: imageUrl
-        value: "${params.imageUrl}"
+        value: "$(params.imageUrl)"
       - name: imageTag
-        value: "${params.imageTag}"
+        value: "$(params.imageTag)"
     resources:
       inputs:
         - name: git-source
