--- a/tekton/resources/picalc-git.yaml
+++ b/tekton/resources/picalc-git.yaml
@@ -8,4 +8,4 @@ spec:
     - name: revision
       value: master
     - name: url
-      value: https://github.com/IBM/tekton-tutorial
+      value: https://github.com/LeoTaoSH/tekton-tutorial
