--- a/src/Dockerfile
+++ b/src/Dockerfile
@@ -1,7 +1,7 @@
 # Use the official Golang image to create a build artifact.
 # This is based on Debian and sets the GOPATH to /go.
 # https://hub.docker.com/_/golang
-FROM golang:1.12 as builder
+FROM 192.168.0.116:5000/golang:latest as builder
 
 # Copy local code to the container image.
 WORKDIR /go/src/github.com/IBM/tekton-tutorial
