--- a/tekton/run/picalc-pipeline-run.yaml
+++ b/tekton/run/picalc-pipeline-run.yaml
@@ -13,7 +13,7 @@ spec:
     - name: pathToYamlFile
       value: "knative/picalc.yaml"
     - name: imageUrl
-      value: us.icr.io/zhanggbj-cr/picalc
+      value: 192.168.0.116:5000/picalc
     - name: imageTag
       value: "1.0"
-  serviceAccount: pipeline-account
+  serviceAccount: tekton-triggers-admin
