--- a/src/Dockerfile
+++ b/src/Dockerfile
@@ -15,7 +15,7 @@ RUN CGO_ENABLED=0 GOOS=linux go build -v -o picalc
 
 # Use a Docker multi-stage build to create a lean production image.
 # https://docs.docker.com/develop/develop-images/multistage-build/#use-multi-stage-builds
-FROM alpine
+FROM 192.168.0.116:5000/alpine:latest
 
 # Copy the binary to the production image from the builder stage.
 COPY --from=builder /go/src/github.com/IBM/tekton-tutorial/picalc /picalc
