updated kubectl deploy

--- a/tekton/tasks/deploy-using-kubectl.yaml
+++ b/tekton/tasks/deploy-using-kubectl.yaml
@@ -31,3 +31,5 @@ spec:
         - "apply"
         - "-f"
         - "/workspace/git-source/$(inputs.params.pathToYamlFile)"
+        - "-n"
+        - "getting-started"
