--- a/tekton/tasks/deploy-using-kubectl.yaml
+++ b/tekton/tasks/deploy-using-kubectl.yaml
@@ -31,5 +31,4 @@ spec:
         - "apply"
         - "-f"
         - "/workspace/git-source/$(inputs.params.pathToYamlFile)"
-        - "-n"
-        - "getting-started"
+        - "--namespace=getting-started"
