--- a/knative/picalc.yaml
+++ b/knative/picalc.yaml
@@ -2,7 +2,7 @@ apiVersion: serving.knative.dev/v1alpha1
 kind: Service
 metadata:
   name: picalc
-  namespace: default
+  namespace: k8s-tekton
 spec:
   runLatest:
     configuration:
